project/logs/20250708_122201.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

In file included from Object3D.VS.hlsl:1:
./object3d.hlsli:13:5: error: unknown type name 'Material3x3'; did you mean 'Material'?
    Material3x3 uvTransform;
    ^~~~~~~~~~~
    Material
./object3d.hlsli:9:8: note: 'Material' declared here
struct Material
       ^
./object3d.hlsli:13:17: error: field has incomplete type 'Material'
    Material3x3 uvTransform;
                ^
./object3d.hlsli:9:8: note: definition of 'Material' is not complete until the closing '}'
struct Material
       ^

